# ratchjob-console-web

./: LICENSE  README.md  components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
dist-wrap/: Cargo.toml  README.md
src/: App.vue  style.css
src/api/: app.ts  cluster.ts  job.ts  metrics.ts  namespace.ts  user.ts
src/components/: SideMenu.vue
src/components/layout/: MainLayout.vue
src/components/namespace/: NamespacePopSelect.vue
src/data/: namespace.ts  resources.ts
src/i18n/lang/: en-US.js  zh-CN.js
src/pages/: About.vue  AppListPage.vue  AppMonitor.vue  Login.vue
src/pages/AppPage/: AppColumns.jsx  AppDetail.vue  AppListPage.vue
src/pages/ClusterPage/: ClusterPage.vue  Columns.jsx
src/pages/IndexPage/: Index.vue
src/pages/JobPage/: JobColumns.jsx  JobDetail.vue  JobListPage.vue  JobTaskLatestHistoryPage.vue  JobTaskListPage.vue  SeleteType.js
src/pages/User/: UserColumns.jsx  UserDetail.vue  UserListPage.vue
src/pages/columns/: AppColumns.jsx
src/route/: router.js  routes.js
src/types/: base.d.ts
src/utils/: EchartsUtils.js
