[package]
name = "ratchjob-web-dist-wrap"
version = "0.1.5"
edition = "2021"
authors = ["heqingpan <heqingpan@126.com>"]
license = "MIT/Apache-2.0"
description = "ratch-job server's console front-end dist embed wrap project."

readme = "README.md"
keywords = ["ratch-job","ratch-job-web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed="6.6.1"
